# goddess_sim

./: CMakeLists.txt  GSAngles.txt  godsim.cc
goddesssort/: GodHit.h  Makefile  godsort.cpp
goddesssort/godsort.dSYM/Contents/: Info.plist
include/: DetectorConstruction.hh  EventAction.hh  GoddessHit.hh  GoddessSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh
macros/: Cf249.mac  Cf249_debug.mac  run.mac  vis.mac
macros/degrader_position/: degrader_position_20cm.mac  degrader_position_30cm.mac
macros/efficiency_curve/: 1000keV.mac  100keV.mac  1100keV.mac  1200keV.mac  1300keV.mac  1400keV.mac  1500keV.mac  1600keV.mac  1700keV.mac  1800keV.mac  1900keV.mac  2000keV.mac  200keV.mac  300keV.mac  400keV.mac  500keV.mac  600keV.mac  700keV.mac  800keV.mac  900keV.mac  effiency_curve.mac  mac_gen.py
models/: BGO_bore.bak  BGO_bore.dwg  BGO_det_B.bak  BGO_det_B.dwg  BGO_det_B.stl  BGO_det_B_alu.bak  BGO_det_B_alu.dwg  BGO_det_B_alu.stl  BGO_det_B_scaled.bak  BGO_det_B_scaled.dwg  BGO_det_B_scaled.stl  BGO_det_C.bak  BGO_det_C.dwg  BGO_det_C.stl  BGO_det_C_orig.bak  BGO_det_C_orig.dwg  BGO_det_D.bak  BGO_det_D.dwg  BGO_det_D.stl  Drawing2.stl  HM_det_B.dwg  HM_det_B.stl  HM_det_C.dwg  HM_det_C.stl  HM_det_D.dwg  HM_det_D.stl  backplug.bak  backplug.dwg  backplug.stl  flange.stl  flowerpot.stl  gammasphere_shell.stl  scattering_chamber.stl  stl_offset.py
src/: DetectorConstruction.cc  EventAction.cc  GoddessHit.cc  GoddessSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  SiliconROGeometry.cc_bak
(+1 files in other folders)
